Css-12bool - Framework complete

--- a/index.html
+++ b/index.html
@@ -15,6 +15,320 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <main>
+        <!-- Section one -->
+        <section>
+            <h1>Esercizio per casa</h1>
+            <!-- one row -->
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xs-1">
+                        <div class="box">1 Col</div>
+                    </div>
+                    <div class="col-xs-1">
+                        <div class="box">1 Col</div>
+                    </div>
+                    <div class="col-xs-1">
+                        <div class="box">1 Col</div>
+                    </div>
+                    <div class="col-xs-1">
+                        <div class="box">1 Col</div>
+                    </div>
+                    <div class="col-xs-1">
+                        <div class="box">1 Col</div>
+                    </div>
+                    <div class="col-xs-1">
+                        <div class="box">1 Col</div>
+                    </div>
+                    <div class="col-xs-1">
+                        <div class="box">1 Col</div>
+                    </div>
+                    <div class="col-xs-1">
+                        <div class="box">1 Col</div>
+                    </div>
+                    <div class="col-xs-1">
+                        <div class="box">1 Col</div>
+                    </div>
+                    <div class="col-xs-1">
+                        <div class="box">1 Col</div>
+                    </div>
+                    <div class="col-xs-1">
+                        <div class="box">1 Col</div>
+                    </div>
+                    <div class="col-xs-1">
+                        <div class="box">1 Col</div>
+                    </div>
+                </div>
+            </div>
+            <!-- Second Row -->
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xs-2">
+                        <div class="box">col</div>
+                    </div>
+                    <div class="col-xs-5">
+                        <div class="box">col</div>
+                    </div>
+                    <div class="col-xs-5">
+                        <div class="box">col</div>
+                    </div>
+                </div>
+            </div>
+            <!-- Third Row -->
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <div class="box">col</div>
+                    </div>
+                </div>
+            </div>
+            <!-- Fourth row -->
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xs-8">
+                        <div class="box">8 col</div>
+                    </div>
+                    <div class="col-xs-2">
+                        <div class="box">2 col</div>
+                    </div>
+                    <div class="col-xs-2">
+                        <div class="box">2 col</div>
+                    </div>
+                </div>
+            </div>
+            <!-- Fifth row -->
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xs-1">
+                        <div class="box">1 col</div>
+                    </div>
+                    <div class="col-xs-2">
+                        <div class="box">2 col</div>
+                    </div>
+                    <div class="col-xs-2">
+                        <div class="box">2 col</div>
+                    </div>
+                    <div class="col-xs-6">
+                        <div class="box">6 col</div>
+                    </div>
+                    <div class="col-xs-1">
+                        <div class="box">1 col</div>
+                    </div>
+                </div>
+            </div>
+            <!-- Nested row -->
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xs-6">
+                        <div class="box">
+                            <div class="container-fluid">
+                                <div class="row">
+                                    <div class="col-xs-2">
+                                        <div class="box b-nest">Nested 2 col</div>
+                                    </div>
+                                    <div class="col-xs-2">
+                                        <div class="box b-nest">Nested 2 col</div>
+                                    </div>
+                                    <div class="col-xs-8">
+                                        <div class="box b-nest">Nested 8 col</div>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-xs-6">
+                        <div class="box">
+                            <div class="container-fluid">
+                                <div class="row">
+                                    <div class="col-xs-2">
+                                        <div class="box b-nest">Nested 2 col</div>
+                                    </div>
+                                    <div class="col-xs-2">
+                                        <div class="box b-nest">Nested 2 col</div>
+                                    </div>
+                                    <div class="col-xs-8">
+                                        <div class="box b-nest">Nested 8 col</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
+        </section>
+
+        <!-- Section 2 -->
+        <section>
+            <!-- 1 -->
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <div class="box pad"></div>
+                    </div>
+                </div>
+            </div>
+            <!-- 2 -->
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xs-1">
+                        <div class="box pad"></div>
+                    </div>
+                    <div class="col-xs-11">
+                        <div class="box pad"></div>
+                    </div>
+                </div>
+            </div>
+            <!-- 3 -->
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xs-2">
+                        <div class="box pad"></div>
+                    </div>
+                    <div class="col-xs-10">
+                        <div class="box pad"></div>
+                    </div>
+                </div>
+            </div>
+            <!-- 4 -->
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xs-3">
+                        <div class="box pad"></div>
+                    </div>
+                    <div class="col-xs-9">
+                        <div class="box pad"></div>
+                    </div>
+                </div>
+            </div>
+            <!-- 5 -->
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xs-4">
+                        <div class="box pad"></div>
+                    </div>
+                    <div class="col-xs-8">
+                        <div class="box pad"></div>
+                    </div>
+                </div>
+            </div>
+            <!-- 6 -->
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xs-5">
+                        <div class="box pad"></div>
+                    </div>
+                    <div class="col-xs-7">
+                        <div class="box pad"></div>
+                    </div>
+                </div>
+            </div>
+            <!-- 7 -->
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xs-6">
+                        <div class="box pad"></div>
+                    </div>
+                    <div class="col-xs-6">
+                        <div class="box pad"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Section 3 -->
+        <section>
+            <h1>Offset</h1>
+            <!-- 1 -->
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xs-1 offset-xs-11">
+                        <div class="box pad"></div>
+                    </div>
+                </div>
+            </div>
+            <!-- 2 -->
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xs-2 offset-xs-10">
+                        <div class="box pad"></div>
+                    </div>
+                </div>
+            </div>
+            <!-- 3 -->
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xs-3 offset-xs-9">
+                        <div class="box pad"></div>
+                    </div>
+                </div>
+            </div>
+            <!-- 4 -->
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xs-4 offset-xs-8">
+                        <div class="box pad"></div>
+                    </div>
+                </div>
+            </div>
+            <!-- 5 -->
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xs-5 offset-xs-7">
+                        <div class="box pad"></div>
+                    </div>
+                </div>
+            </div>
+            <!-- 6 -->
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xs-6 offset-xs-6">
+                        <div class="box pad"></div>
+                    </div>
+                </div>
+            </div>
+            <!-- 7 -->
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xs-7 offset-xs-5">
+                        <div class="box pad"></div>
+                    </div>
+                </div>
+            </div>
+            <!-- 8 -->
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xs-8 offset-xs-4">
+                        <div class="box pad"></div>
+                    </div>
+                </div>
+            </div>
+            <!-- 9 -->
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xs-9 offset-xs-3">
+                        <div class="box pad"></div>
+                    </div>
+                </div>
+            </div>
+            <!-- 10 -->
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xs-10 offset-xs-2">
+                        <div class="box pad"></div>
+                    </div>
+                </div>
+            </div>
+            <!-- 11 -->
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xs-11 offset-xs-1">
+                        <div class="box pad"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
